--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   overflow: hidden;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -688,6 +689,6 @@ div.container {
   display: block;
 }
 
-.profile-card1 {
+div.profile-card1 {
   display: none;
 }
